--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.3.1",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^3.1.0"
+    "@nuxtjs/markdownit": "^1.2.10",
+    "@nuxtjs/tailwindcss": "^3.1.0",
+    "markdown-it-attrs": "^3.0.3",
+    "markdown-it-div": "^1.1.0"
   }
 }
